Bug 804382: Fix review notes white space in developer version pages, and fix white space in version notes copied to the clipboard.

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -686,6 +686,10 @@ a.extra {
     text-shadow: 0 -1px #e00;
 }
 
+.email_comment {
+    white-space: pre-wrap;
+}
+
 .modal p + .close,  /* Hide impala X buttons. */
 #modals {
     display: none;
